applauncherd (2.0.4) unstable; urgency=low

  * Fixes: NB#284949 - m & d app boosters are leaking FDs 

 -- Olli Leppanen <olli.leppanen@nokia.com>  Mon, 3 Oct 2011 11:18:27 +0300

applauncherd (2.0.3) stable; urgency=low

  * Fixes: NB#274400 - [TASK] Remove legacy code from applauncherd

 -- Marek Ruszczak <ext-marek.ruszczak@nokia.com>  Tue, 27 Sep 2011 15:48:27 +0300

applauncherd (2.0.2) stable; urgency=low

  * Fixes: NB#274400 - [TASK] Remove legacy code from applauncherd

 -- Marek Ruszczak <ext-marek.ruszczak@nokia.com>  Mon, 26 Sep 2011 13:59:20 +0300

applauncherd (2.0.1) stable; urgency=low

  * Changes: Fix performance tests
  * Changes: Fix dependency for testscripts
  * Changes: Add tests for detecting unexpected GL context in boosters

 -- Marek Ruszczak <ext-marek.ruszczak@nokia.com>  Thu, 26 Sep 2011 13:30:00 +0300

applauncherd (2.0.0) stable; urgency=low

  * Fixes: NB#274302 - don't unload the main binary
  * Fixes: NB#275522 - Booster::requestSplash() segfault
  * Fixes: NB#274400 - [TASK] Remove legacy code from applauncherd
  * Changes: Add unit test for Logger - open log twice
  * Changes: Add functional test - invoker kills application when applauncherd dies

 -- Alexey Shilov <alexey.shilov@nokia.com>  Thu, 18 Aug 2011 15:43:02 +0300

applauncherd (1.1.1) stable; urgency=low

  * Changes: Add functional test - invoker kills application when applauncherd dies
  * Fixes: NB#282595 - pipes 3-6 must be re-created before execution of main() process

 -- Olli Leppanen <olli.leppanen@nokia.com>  Wed, 7 Sep 2011 15:12:13 +0300

applauncherd (1.1.0) stable; urgency=low

  * Changes: Add unit test for Logger - open log twice
  * Fixes: NB#269075 - Precached (LibMeegotouch) applications do not set WM_CLASS window atom properly

 -- Dmitry Rozenshtein <ext-dmitry.2.rozenshtein@nokia.com>  Mon, 5 Sep 2011 13:33:55 +0300

applauncherd (1.0.9) stable; urgency=low

  * Changes: Improve test debug output.