@@ -1,7 +1,8 @@
 applauncherd (2.0.4) unstable; urgency=low
 
   * Fixes: NB#284949 - m & d app boosters are leaking FDs 
-
+  * Changes: Insignificant returned false in qml perf tests
+	
  -- Olli Leppanen <olli.leppanen@nokia.com>  Mon, 3 Oct 2011 11:18:27 +0300
 
 applauncherd (2.0.3) stable; urgency=low
